fix z-index problem

--- a/css/main.css
+++ b/css/main.css
@@ -116,7 +116,7 @@ nav {
 
     background-color: var(--bg-primary);
 
-    z-index: 1;
+    z-index: 2;
 }
 
 nav .container {
@@ -186,7 +186,7 @@ nav .submenu {
 
     background-color: var(--bg-dark);
 
-    z-index: 2;
+    z-index: 3;
 }
 
 nav .submenu a {
